--- a/itopener-parent/itopener-spring-boot-starters-parent/itopener-zuul-redisroute-spring-boot-starter-parent/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/itopener-zuul-redisroute-spring-boot-starter-parent/pom.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -14,5 +12,9 @@
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+	<modules></modules>	</properties>
+  <modules>
+    <module>itopener-zuul-redisroute-spring-boot-autoconfigure</module>
+    <module>itopener-zuul-redisroute-spring-boot-starter</module>
+  </modules>
 </project>
