--- a/itopener-parent/spring-boot-starters-parent/zuul-route-spring-boot-starter-parent/zuul-route-spring-boot-common/pom.xml
+++ b/itopener-parent/spring-boot-starters-parent/zuul-route-spring-boot-starter-parent/zuul-route-spring-boot-common/pom.xml
@@ -20,10 +20,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
