--- a/itopener-parent/spring-boot-starters-parent/pom.xml
+++ b/itopener-parent/spring-boot-starters-parent/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -22,5 +21,6 @@
 		<module>lock-redis-spring-boot-starter-parent</module>
 		<module>elasticjob-spring-boot-starter-parent</module>
 		<module>zuul-route-spring-boot-starter-parent</module>
-	</modules>
+    <module>eureka-spring-boot-starter-parent</module>
+  </modules>
 </project>
