--- a/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-client/pom.xml
+++ b/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-client/pom.xml
@@ -45,6 +45,18 @@
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.itopener</groupId>
+			<artifactId>eureka-client-spring-boot-starter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 			<optional>true</optional>
