--- a/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-client/src/main/resources/application-dev.properties
+++ b/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-client/src/main/resources/application-dev.properties
@@ -5,3 +5,5 @@ logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka/,http://localhost:8082/eureka/
+
+management.security.enabled=false
