--- a/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-client2/pom.xml
+++ b/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-client2/pom.xml
@@ -42,6 +42,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.itopener</groupId>
+			<artifactId>eureka-client-spring-boot-starter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
