--- a/itopener-parent/demo-parent/demo-zuul-parent/demo-zuul-eureka/src/main/resources/application-dev.properties
+++ b/itopener-parent/demo-parent/demo-zuul-parent/demo-zuul-eureka/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #server
 server.port=8090
 
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
 #EurekaClientConfigBean,EurekaServerConfigBean
