--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis/src/main/resources/application-dev.properties
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis/src/main/resources/application-dev.properties
@@ -12,5 +12,6 @@ logging.level.com.itopener=DEBUG
 #spring.redis.pool.maxActive=10
 #spring.redis.pool.maxWait=3000
 #redis cluster
-spring.redis.cluster.nodes=10.16.30.152:7000,10.16.30.152:7001,10.16.30.152:7002,10.16.30.152:7003,10.16.30.152:7004,10.16.30.152:7005
+#spring.redis.cluster.nodes=10.16.30.152:7000,10.16.30.152:7001,10.16.30.152:7002,10.16.30.152:7003,10.16.30.152:7004,10.16.30.152:7005
+spring.redis.cluster.nodes=10.250.20.179:7001,10.250.20.179:7002,10.250.20.179:7003,10.250.20.179:7004,10.250.20.179:7005,10.250.20.179:7006
 spring.redis.cluster.maxRedirects=3
