--- a/itopener-parent/tools-parent/tools-redis-parent/pom.xml
+++ b/itopener-parent/tools-parent/tools-redis-parent/pom.xml
@@ -8,6 +8,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>tools-redis-parent</artifactId>
+	<version>1.2.0-SNAPSHOT</version>
 	<name>tools-redis-parent</name>
 	<url>http://maven.apache.org</url>
 	<packaging>pom</packaging>
